# Rust-PostgreSQL-HTTP_Server

./: .gitignore  readme.md
docker/: .env.example  .gitignore  docker-compose.yml
docker/postgres/init-scripts/: init.sql
docker/tools/: commands.sh
server/: .env  Cargo.toml  diesel.toml
server/src/: db_data.rs  lib.rs
server/src/users/: models.rs  schema.rs
