[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# hyper = { version = "0.14.27", features = ["server"] }
hyper = { version = "0.14.27", features = ["http1", "server", "tcp"] }
tokio = { version = "1", features = ["full"] }